fluentd-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
 name: fluentd
 labels:
 k8s-app: fluentd-logging
spec:
 selector:
 matchLabels:
 name: fluentd
 template:
 metadata:
 labels:
 name: fluentd
 spec:
 containers:
 - name: fluentd
 image: fluent/fluentd:latest
 resources:
 limits:
 memory: 200Mi
 requests:
 cpu: 100m
 memory: 200Mi
 volumeMounts:
 - name: varlog
 mountPath: /var/log
 - name: varlibdockercontainers
 mountPath: /var/lib/docker/containers
 terminationGracePeriodSeconds: 30
 volumes:
 - name: varlog
 hostPath:
 path: /var/log
 - name: varlibdockercontainers
 hostPath:
 path: /var/lib/docker/containers
