alertmanager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: alertmanager-deployment
spec:
 replicas: 1
 selector:
 matchLabels:
 app: alertmanager
 template:
 metadata:
 labels:
 app: alertmanager
 spec:
 containers:
 - name: alertmanager
 image: prom/alertmanager:latest
 ports:
 - containerPort: 9093
---
apiVersion: v1
kind: Service
metadata:
 name: alertmanager-service
spec:
 selector:
 app: alertmanager
 ports:
 - protocol: TCP
 port: 9093
 targetPort: 9093
 type: LoadBalancer
