grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: grafana-deployment
spec:
 replicas: 1
 selector:
 matchLabels:
 app: grafana
 template:
 metadata:
 labels:
 app: grafana
 spec:
 containers:
 - name: grafana
 image: grafana/grafana:latest
 value: your-admin-password
 ports:
 - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
 name: grafana-service
spec:
 selector:
 app: grafana
 ports:
 - protocol: TCP
 port: 3000
 targetPort: 3000
 type: LoadBalancer
