nextjs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: nextjs-app
spec:
 replicas: 3
 selector:
 matchLabels:
 app: nextjs
 template:
 metadata:
 labels:
 app: nextjs
 spec:
 containers:
 - name: nextjs-app
 image: your-nextjs-image:latest
 ports:
 - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
 name: nextjs-service
spec:
 selector:
 app: nextjs
 ports:
 - protocol: TCP
 port: 80
 targetPort: 3000
 type: LoadBalancer
