nextjs-dev-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: nextjs-app-dev
spec:
 replicas: 3
 selector:
 matchLabels:
 app: nextjs-dev
 template:
 metadata:
 labels:
 app: nextjs-dev
 spec:
 containers:
 - name: nextjs-app
 image: your-dockerhub-username/your-nextjs-image:latest
 ports:
 - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
 name: nextjs-service-dev
spec:
 selector:
 app: nextjs-dev
 ports:
 - protocol: TCP
 port: 80
 targetPort: 3000
 type: LoadBalancer
