prometheus.yaml
apiVersion: v1
kind: Service
metadata:
 name: prometheus-service
spec:
 selector:
 app: prometheus
 ports:
 - protocol: TCP
 port: 9090
 targetPort: 9090
 type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: prometheus-deployment
spec:
 replicas: 1
 selector:
 matchLabels:
 app: prometheus
 template:
 metadata:
 labels:
 app: prometheus
 spec:
 containers:
 - name: prometheus
 image: prom/prometheus:latest
 volumeMounts:
 - name: prometheus-config
 mountPath: /etc/prometheus
 ports:
 - containerPort: 9090
 volumes:
 - name: prometheus-config
 configMap:
 name: prometheus-config
