nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: nginx-ingress
 annotations:
 nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
 - host: your-domain.com
 http:
 paths:
 - path: /
 pathType: Prefix
 backend:
 service:
 name: nextjs-service
 port:
 number: 80
